<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.degram.ui.insights.InsightsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/emoji"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background_circular"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/missing_permission_emoji"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission == true}"
            app:layout_constraintBottom_toTopOf="@+id/heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/heading"
            style="@style/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/missing_permission_heading"
            android:textSize="24sp"
            app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission == true}"
            app:layout_constraintBottom_toTopOf="@+id/body"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emoji" />

        <TextView
            android:id="@+id/body"
            style="@style/Body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/missing_permission_body"
            app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission == true}"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heading" />

        <TextView
            android:id="@+id/button"
            style="@style/Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_btn"
            android:padding="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/grant_permission"
            android:textAllCaps="false"
            android:textColor="@color/smokey_white"
            android:textSize="18sp"
            app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission == true}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/body" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>