<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.degram.ui.home.HomeViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <include
            android:id="@+id/no_data"
            layout="@layout/layout_no_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:viewModel="@{viewModel}" />


        <include
            android:id="@+id/missing_permissions"
            layout="@layout/layout_missing_permissions"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:viewModel="@{viewModel}" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/name"
                    style="@style/Body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/hi_buddy"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission != true}" />

                <TextView
                    android:id="@+id/compliment"
                    style="@style/Heading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:textSize="24sp"
                    app:compliment="@{viewModel.degramScore}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name"
                    app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission != true}"
                    tools:text="@string/degram_score_100" />

                <include
                    android:id="@+id/degram_score_layout"
                    layout="@layout/layout_degram_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/compliment"
                    app:viewModel="@{viewModel}"
                    app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission != true}" />

                <TextView
                    android:id="@+id/metrics_heading"
                    style="@style/Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/metrics"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/degram_score_layout"
                    app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission != true}" />

                <HorizontalScrollView
                    android:id="@+id/metrics_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/metrics_heading">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <include
                            android:id="@+id/daily_average"
                            layout="@layout/item_metrics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            app:data="@{viewModel.dailyAverage}"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:viewModel="@{viewModel}"
                            app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission != true}" />

                        <include
                            android:id="@+id/global_average"
                            layout="@layout/item_metrics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            app:data="@{viewModel.currentUsage}"
                            app:layout_constraintBottom_toBottomOf="@+id/daily_average"
                            app:layout_constraintStart_toEndOf="@+id/daily_average"
                            app:viewModel="@{viewModel}"
                            app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission != true}" />

                        <include
                            android:id="@+id/streaks"
                            layout="@layout/item_metrics"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            app:data="@{viewModel.streakCount}"
                            app:layout_constraintBottom_toBottomOf="@+id/global_average"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/global_average"
                            app:viewModel="@{viewModel}"
                            app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission != true}" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </HorizontalScrollView>

                <TextView
                    android:id="@+id/past_usage_heading"
                    style="@style/Heading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/past_usage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/metrics_data"
                    app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission != true}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:background="@drawable/background_item"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/past_usage_heading">

                    <TextView
                        android:id="@+id/usage"
                        style="@style/Body"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:padding="16dp"
                        android:text="@{viewModel.usage}"
                        android:textColor="@android:color/black"
                        android:textSize="16sp"
                        app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission != true}"
                        tools:text="2h 32 m" />

                    <com.example.degram.ui.home.RoundedBarChart
                        android:id="@+id/chart"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="32dp"
                        android:background="@drawable/background_item"
                        app:radius="20dp"
                        app:visibility="@{viewModel.noDataError != true &amp;&amp; viewModel.askPermission != true}" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>